--- a/pom.xml
+++ b/pom.xml
@@ -3,31 +3,19 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>be.nabu.libs.http</groupId>
 	<artifactId>http-server-websockets</artifactId>
-	<version>1.0-SNAPSHOT</version>
-	<packaging>bundle</packaging>
+	<version>${be.nabu.libs.http-http-server-websockets-version}</version>
+	<packaging>jar</packaging>
 	<name>http-server-websockets</name>
 	<url>http://nabu.be</url>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
+	<parent>
+		<groupId>be.nabu</groupId>
+		<artifactId>core</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
 
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<version>2.3.7</version>
-				<extensions>true</extensions>
-				<configuration>
-					<instructions>
-						<Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
-						<Bundle-Name>${project.artifactId}</Bundle-Name>
-						<Bundle-Version>1.0.0</Bundle-Version>
-						<Export-Package>${project.groupId}.server.rest</Export-Package>
-					</instructions>
-				</configuration>
-			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -43,25 +31,15 @@
 		<dependency>
 			<groupId>be.nabu.libs.http</groupId>
 			<artifactId>http-server</artifactId>
-			<version>1.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.6.4</version>
 		</dependency>
 
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<version>1.0.2</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.11</version>
-			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
